--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -14,6 +14,9 @@
   align-items: center;
   width: 100%;
   margin: 54px 0 29px;
+  font-family: "Helvetica Roman";
+  font-weight: 700;
+  letter-spacing: 0;
 
   @include respond-max($bp-lg-lap) {
     margin: 44px 0 22px 0;
@@ -27,42 +30,57 @@
     margin: 28px 0 20px 0;
   }
 
+  input {
+    padding: 15px 12px 15px 20px;
+    margin: 0;
+    border-radius: 100px;
+    border: 0px;
+    width: 90%;
+    text-transform: uppercase;
+    font-size: 14px;
+
+    @include respond-max($bp-lg-desk) {
+      padding: 11px 12px 11px 20px;
+      font-size: 12px;
+      width: 350px;
+    }
+    @include respond-max($bp-tab) {
+      font-size: 10px;
+      width: 290px;
+    }
+  }
+
+  button {
+    padding: 15px 0 15px 0;
+    width: 110px;
+    background-color: #ff4c24;
+    color: #ffffff;
+    margin-left: -16%;
+    border-radius: 50px;
+    border: 0;
+    text-transform: uppercase;
+    font-size: 14px;
+
+    @include respond-max($bp-lg-desk) {
+      padding: 11px 0 11px 0;
+      font-size: 12px;
+    }
+    @include respond-max($bp-tab) {
+      font-size: 10px;
+    }
+  }
+
+  .msg-alert {
+    font-family: "Helvetica Roman", sans-serif;
+    font-size: 11px;
+    line-height: 100%;
+    text-transform: uppercase;
+  }
+
   .form-subscribe {
     position: relative;
     width: 550px;
     padding-bottom: 29px;
-
-    .email__submit,
-    .button__submit {
-      padding: 15px 12px 15px 20px;
-      margin: 0;
-      border-radius: 100px;
-      border: 0px;
-      text-transform: uppercase;
-      font-family: "Helvetica Roman";
-      font-weight: 700;
-      font-size: 14px;
-      letter-spacing: 0;
-      width: 90%;
-
-      @include respond-max($bp-lg-desk) {
-        padding: 10px 12px 10px 20px;
-        font-size: 12px;
-        width: 350px;
-      }
-    }
-
-    .button__submit {
-      padding: 15px 0 15px 0;
-      width: 110px;
-      background-color: #ff4c24;
-      color: #ffffff;
-      margin-left: -16%;
-
-      @include respond-max($bp-lg-desk) {
-        padding: 10px 0 10px 0;
-      }
-    }
   }
 }
 
