--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -93,6 +93,13 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  &.outro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding-top: 1%;
   }
 }
@@ -146,25 +153,42 @@ main {
 
 .scene-container {
   width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .intro-video {
   text-align: center;
-  margin: 10px auto;
+  margin: 50px 0 50px 0;
   width: 75%;
+
+  @include respond-max($bp-lg-desk) {
+    margin: 25px 0 25px 0;
+  }
 
   @include respond-max($bp-desk) {
     width: 82%;
-    margin: 21px auto;
+    margin: 42px 0 42px 0;
+  }
+
+  @include respond-max($bp-lg-lap) {
+    margin: 38px 0 38px 0;
   }
 
   @include respond-max($bp-lap) {
+    margin: 30px 0 30px 0;
     width: 78%;
   }
 
   @include respond-max($bp-tab) {
-    margin: 9px auto 16px;
+    margin: 27px 0 29px 0;
     width: 85%;
+  }
+
+  @include respond-max($bp-mob) {
+    margin: 18px 0 16px 0;
+    width: 328px;
   }
 }
 
@@ -270,29 +294,40 @@ main {
 
     @include respond-max($bp-tab) {
       letter-spacing: -1.38;
-      padding-bottom: 30px;
     }
 
     @include respond-max($bp-mob) {
       font-size: 36px;
       letter-spacing: -1.38;
-      padding-bottom: 18px;
     }
   }
 
   .nsc-title-large {
-    font-size: 262px;
-    line-height: 0.9;
-    letter-spacing: -4px;
+    font-size: 350px;
+    line-height: 85%;
+    letter-spacing: -14px;
+
+    @include respond-max($bp-lg-desk) {
+      font-size: 262px;
+      line-height: 80%;
+      letter-spacing: -4px;
+    }
+
+    @include respond-max($bp-desk) {
+      font-size: 262px;
+    }
 
     @include respond-max($bp-lg-lap) {
       font-size: 185px;
       letter-spacing: -7.4px;
     }
 
+    @include respond-max($bp-lap) {
+      line-height: 85%;
+    }
+
     @include respond-max($bp-tab) {
       font-size: 138px;
-      line-height: 0.85;
     }
 
     @include respond-max($bp-mob) {
