--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -48,6 +48,9 @@
       font-size: 10px;
       width: 290px;
     }
+    @include respond-max($bp-mob) {
+      width: 240px;
+    }
   }
 
   button {
@@ -75,6 +78,8 @@
     font-size: 11px;
     line-height: 100%;
     text-transform: uppercase;
+    color: #5e7017 !important;
+    height: 15px;
   }
 
   .form-subscribe {
