--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -143,7 +143,7 @@ main {
     font-size: 165px;
   }
   @include respond-max($bp-lap) {
-    font-size: 150px;
+    font-size: 142px;
   }
 
   @include respond-max($bp-mob) {
@@ -205,6 +205,9 @@ main {
     @include respond-max($bp-lg-desk) {
       padding-top: 51px;
       padding-bottom: 14px;
+    }
+    @include respond-max($bp-lg-lap) {
+      padding-bottom: 5px;
     }
     @include respond-max($bp-tab) {
       padding-top: 5%;
