--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -1,3 +1,41 @@
+html.can-touch {
+  &.asian-womxn .targetClass:hover:not(.poster) {
+    -webkit-box-shadow: 0px 0px 24px 12px #ff4c24;
+    box-shadow: 0px 0px 24px 12px #ff4c24;
+  }
+
+  &.illustrators .targetClass:hover:not(.poster) {
+    -webkit-box-shadow: 0px 0px 24px 12px #ffceb3;
+    box-shadow: 0px 0px 24px 12px #ffceb3;
+
+    &.drop-shadow {
+      -webkit-box-shadow: 0px 0px 0px 0px #ffceb3;
+      box-shadow: 0px 0px 0px 0px #ffceb3;
+      filter: drop-shadow(0 0 17px #ffceb3);
+    }
+  }
+
+  &.blog .targetClass:hover:not(.poster) {
+    -webkit-box-shadow: 0px 0px 24px 12px #c8ffce;
+    box-shadow: 0px 0px 24px 12px #c8ffce;
+  }
+
+  &.health .targetClass:hover:not(.poster) {
+    -webkit-box-shadow: 0px 0px 24px 12px #34ac5d;
+    box-shadow: 0px 0px 24px 12px #34ac5d;
+  }
+
+  &.nightsnack .targetClass:hover:not(.poster) {
+    -webkit-box-shadow: 0px 0px 24px 12px #8667ff;
+    box-shadow: 0px 0px 24px 12px #8667ff;
+  }
+
+  &.spiritual .targetClass:hover:not(.poster) {
+    -webkit-box-shadow: 0px 0px 24px 12px #0b8639;
+    box-shadow: 0px 0px 24px 12px #0b8639;
+  }
+}
+
 .images-well {
   width: 100%;
   height: 100%;
