--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -78,8 +78,10 @@
     font-size: 11px;
     line-height: 100%;
     text-transform: uppercase;
-    color: #5e7017 !important;
-    height: 15px;
+
+    p {
+      color: #5e7017 !important;
+    }
   }
 
   .form-subscribe {
