--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -10,10 +10,9 @@
 .mail-signup {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 100%;
-  margin: 54px 0 29px;
+  margin: 54px 0 29px 0;
   font-family: "Helvetica Roman";
   font-weight: 700;
   letter-spacing: 0;
@@ -23,19 +22,22 @@
   }
 
   @include respond-max($bp-lap) {
-    margin: 40px 0 21px 0;
+    margin: 28px 0 0 0;
   }
 
   @include respond-max($bp-mob) {
     margin: 28px 0 20px 0;
   }
 
+  form {
+    margin-bottom: 1%;
+  }
+
   input {
     padding: 15px 12px 15px 20px;
-    margin: 0;
     border-radius: 100px;
     border: 0px;
-    width: 90%;
+    width: 480px;
     text-transform: uppercase;
     font-size: 14px;
 
@@ -46,16 +48,14 @@
     }
     @include respond-max($bp-tab) {
       font-size: 10px;
-      width: 290px;
     }
     @include respond-max($bp-mob) {
-      width: 240px;
+      width: 290px;
     }
   }
 
   button {
-    padding: 15px 0 15px 0;
-    width: 110px;
+    padding: 11px 15px 11px 15px;
     background-color: #ff4c24;
     color: #ffffff;
     margin-left: -16%;
@@ -65,7 +65,6 @@
     font-size: 14px;
 
     @include respond-max($bp-lg-desk) {
-      padding: 11px 0 11px 0;
       font-size: 12px;
     }
     @include respond-max($bp-tab) {
@@ -78,6 +77,7 @@
     font-size: 11px;
     line-height: 100%;
     text-transform: uppercase;
+    display: block;
 
     p {
       color: #5e7017 !important;
