--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -55,7 +55,7 @@
   }
 
   button {
-    padding: 11px 15px 11px 15px;
+    padding: 15px;
     background-color: #ff4c24;
     color: #ffffff;
     margin-left: -16%;
@@ -65,6 +65,7 @@
     font-size: 14px;
 
     @include respond-max($bp-lg-desk) {
+      padding: 11px 15px 11px 15px;
       font-size: 12px;
     }
     @include respond-max($bp-tab) {
