--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -44,8 +44,7 @@ main {
 
 // general background styles
 .background-container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   top: 0;
   position: fixed;
   z-index: 0;
@@ -84,7 +83,6 @@ main {
 
 .scene-wrapper {
   height: 100vh;
-  width: 100vw;
   overflow: hidden;
 
   &.intro {
