--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -57,9 +57,9 @@ main {
   width: 0%;
   max-width: 100%;
 
-  @include respond-max($bp-mob) {
-    height: 30vh;
-  }
+  // @include respond-max($bp-mob) {
+  //   height: 30vh;
+  // }
 
   &.index {
     background-color: #ffe3c9;
@@ -91,9 +91,9 @@ main {
   height: 100vh;
   width: 100%;
 
-  @include respond-max($bp-mob) {
-    height: 90vh;
-  }
+  // @include respond-max($bp-mob) {
+  //   height: 90vh;
+  // }
 
   &.intro {
     display: flex;
