--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -90,6 +90,7 @@ main {
 .scene-wrapper {
   height: 100vh;
   width: 100%;
+  padding-bottom: env(safe-area-inset-bottom);
 
   // @include respond-max($bp-mob) {
   //   height: 90vh;
