fix: mailchimp transition

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -29,7 +29,8 @@
     @include respond-max($bp-mob) {
       width: 114px;
       right: 20px;
-      margin-bottom: env(safe-area-inset-bottom, 12vh);
+      // margin-bottom: 10vh;
+      // margin-bottom: env(safe-area-inset-bottom);
     }
   }
 
@@ -39,7 +40,8 @@
 
     @include respond-max($bp-mob) {
       bottom: 12px;
-      margin-bottom: env(safe-area-inset-bottom, 12vh);
+      // margin-bottom: 10vh;
+      // margin-bottom: env(safe-area-inset-bottom);
     }
 
     a {
