--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -6,8 +6,9 @@ $bp-lg-desk: 2050px;
 $bp-desk: 1680px;
 $bp-lg-lap: 1440px;
 $bp-lap: 1280px;
-$bp-tab: 850px;
+$bp-tab: 800px;
 $bp-mob: 600px;
+$bp-mob-xs: 675px;
 
 @mixin respond($width) {
   @media screen and (max-width: $width) {
@@ -16,6 +17,11 @@ $bp-mob: 600px;
 }
 @mixin respond-max($width) {
   @media screen and (max-width: $width) {
+    @content;
+  }
+}
+@mixin respond-max-height($height) {
+  @media screen and (max-height: $height) {
     @content;
   }
 }
