fix: adjust tablet breakpoint for iPad Air

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -178,7 +178,7 @@
     }
 
     @include respond-max($bp-tab) {
-      bottom: 12px;
+      bottom: 8%;
     }
 
     @include respond-max($bp-mob) {
